# gauntlet-ai-training-2026-assignments

./: README.md
rag-assignment/: .gitignore  database.json  eval_groundedness.py  fetch_confluence_docs.py  hybrid_generation.py  hybrid_retrieval.py  ingestion.py  metadata_filtered_generation.py  metadata_filtered_retrieval.py  naive_generation.py  naive_retrieval.py  pyproject.toml
